# snyk-genbb-data

./: README.md  bitbucket_import_data.json  pyproject.toml
src/: bitbucket_cloud.py  bitbucket_server.py  main.py
