[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["samsnyk <samuel.dahlberg@snyk.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.12.3"
requests = "^2.32.3"

[tool.poetry.scripts]
snyk-genbb-data = "snyk-genbb-data.src:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"